<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".pemasaran_shop"
    tools:showIn="@layout/activity_pemasaran_shop">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Toko Sovenir Dan Oleh-Oleh"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text1"/>
    <Button
        android:id="@+id/telepon1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_telpon"
        android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/text2"/>
        <Button
         android:id="@+id/telepon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
         android:background="@drawable/ic_telpon"
         android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text3"/>
        <Button
            android:id="@+id/telepon3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text4"/>
        <Button
            android:id="@+id/telepon4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text5"/>
        <Button
            android:id="@+id/telepon5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text7"/>
        <Button
            android:id="@+id/telepon7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text8"/>
        <Button
            android:id="@+id/telepon8"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text9"/>
        <Button
            android:id="@+id/telepon9"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text10"/>
        <Button
            android:id="@+id/telepon10"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text11"/>
        <Button
            android:id="@+id/telepon11"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text12"/>
        <Button
            android:id="@+id/telepon12"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text13"/>
        <Button
            android:id="@+id/telepon13"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text14"/>
        <Button
            android:id="@+id/telepon14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text15"/>
        <Button
            android:id="@+id/telepon15"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text16"/>
        <Button
            android:id="@+id/telepon16"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text17"/>
        <Button
            android:id="@+id/telepon17"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/text18"/>
        <Button
            android:id="@+id/telepon18"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_telpon"
            android:layout_marginVertical="@android:dimen/app_icon_size"/>
    </LinearLayout>

</LinearLayout>

</androidx.core.widget.NestedScrollView>