<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".pemasaran_restoran"
    tools:showIn="@layout/activity_pemasaran_restoran">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Restoran, Rumah Makan, dan Cafe"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto1"/>
            <Button
                android:id="@+id/telepon1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto2"/>
            <Button
                android:id="@+id/telepon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto3"/>
            <Button
                android:id="@+id/telepon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto4"/>
            <Button
                android:id="@+id/telepon4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto5"/>
            <Button
                android:id="@+id/telepon5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto6"/>
            <Button
                android:id="@+id/telepon6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto7"/>
            <Button
                android:id="@+id/telepon7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto8"/>
            <Button
                android:id="@+id/telepon8"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto9"/>
            <Button
                android:id="@+id/telepon9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto10"/>
            <Button
                android:id="@+id/telepon10"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/resto11"/>
            <Button
                android:id="@+id/telepon11"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>