<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".pemasaran_hotel"
    tools:showIn="@layout/activity_pemasaran_hotel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Hotel / Resort"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Homestay / Penginapan"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel1"/>
            <Button
                android:id="@+id/telepon1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel2"/>
            <Button
                android:id="@+id/telepon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel3"/>
            <Button
                android:id="@+id/telepon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel4"/>
            <Button
                android:id="@+id/telepon4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel5"/>
            <Button
                android:id="@+id/telepon5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/hotel6"/>
            <Button
                android:id="@+id/telepon6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_telpon"
                android:layout_marginVertical="@android:dimen/app_icon_size"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>